# example-monitoring

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.e2e  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
db/: apply_migrations.py
db/migrations/: initial_schema_20260613120000_a7f3e2.sql
db/queries/: create_org.sql  create_user.sql  delete_site.sql  get_site_by_id.sql  get_sites_due_for_poll.sql  get_user_by_id.sql  get_user_by_username.sql  insert_poll_result.sql  insert_site.sql  list_poll_results.sql  list_sites_by_org.sql  update_org_notifications.sql  update_poll_time.sql  update_site_after_poll.sql  username_exists.sql
tasks/: db.js  notifications.js  poller.js
templates/: base.html
templates/auth/: login.html  register.html
templates/landing/: index.html
templates/settings/: index.html
templates/sites/: _history.html  detail.html  list.html  new.html
tests/e2e/: Gemfile  run.sh
tests/e2e/spec/: monitoring_spec.rb  poller_spec.rb  spec_helper.rb
tests/e2e/spec/support/: monitoring_helpers.rb
tests/mock-https/: Dockerfile  package.json  server.js
web/: Cargo.toml  README.md  auth.py  db.py  http_util.py  main.py
web/controllers/: auth_controller.py  landing.py  settings.py  sites.py
web/src/: auth.rs  config.rs  db.rs  http.rs  main.rs
web/src/controllers/: auth_controller.rs  landing.rs  mod.rs  settings.rs  sites.rs
